<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">


    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_square_shape"
        android:backgroundTint="@color/default_color_app" />

    <LinearLayout
        android:id="@+id/tools_delete_selected_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/delete_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/delete_items"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools_delete_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/clear_all" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/delete_all"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools_deselect_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/select_check_box_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/deselect_items"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools_sort_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/list_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sort_items"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tools_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/share_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share_list"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>