<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp">


    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_square_shape"
        android:backgroundTint="@color/default_color_app" />

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/tools_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/delete_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/delete_recipe"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/tools_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/outline_ink_pen_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/edit_recipe"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/tools_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/share_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/share_recipe"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/tools_move_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/shopping_cart_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="sans-serif-medium"
            android:text="@string/move_to_cart"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>