<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:backgroundTint="@color/background">

    <View
        android:id="@+id/pickup_view"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="@color/default_color_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Main container-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingBottom="32dp"
            android:paddingEnd="16dp">


            <LinearLayout
                android:id="@+id/container_title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edtx_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_square_shape_for_edtx"
                    android:backgroundTint="@color/backgroundIc"
                    android:hint="@string/recipe_title"
                    android:inputType="textCapSentences"
                    android:padding="12dp"
                    android:textColor="@color/WhiteForTxt"
                    android:textColorHint="@color/myGray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/character_count_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/value_bar_value"
                    android:textColor="@color/LtGrayFoTxt"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtx_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_square_shape_for_edtx"
                    android:backgroundTint="@color/backgroundIc"
                    android:gravity="top|start"
                    android:hint="@string/description_"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="150dp"
                    android:padding="12dp"
                    android:textColor="@color/WhiteForTxt"
                    android:textColorHint="@color/myGray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/character_count_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/value_bar_value"
                    android:textColor="@color/LtGrayFoTxt"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="#33333333"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/container_title_description">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ingredient"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/default_color_app"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    tools:itemCount="5" />


                <EditText
                    android:id="@+id/edtx_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_square_shape_for_edtx"
                    android:backgroundTint="@color/backgroundIc"
                    android:gravity="top|start"
                    android:hint="@string/ingredient_"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="100dp"
                    android:padding="12dp"
                    android:textColor="@color/WhiteForTxt"
                    android:textColorHint="@color/myGray"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_square_shape"
                    android:backgroundTint="@color/backgroundIc"
                    android:fontFamily="sans-serif"
                    android:text="@string/add_ingredient"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/default_color_app"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="#33333333"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_preparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/container_ingredients">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/preparation"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="@color/default_color_app"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_preparation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    tools:itemCount="5" />


                <EditText
                    android:id="@+id/edtx_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_square_shape_for_edtx"
                    android:backgroundTint="@color/backgroundIc"
                    android:gravity="top|start"
                    android:hint="@string/step_1"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="100dp"
                    android:padding="12dp"
                    android:textColor="@color/WhiteForTxt"
                    android:textColorHint="@color/myGray"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_square_shape"
                    android:backgroundTint="@color/backgroundIc"
                    android:fontFamily="sans-serif"
                    android:text="@string/add_step"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/default_color_app"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="#33333333"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/default_color_app"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@color/WhiteForTxt"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/container_preparation" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>