<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/glass_background"
    >

    <View
        android:id="@+id/pickup_view"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="@color/default_color_app"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--Main container-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickup_view"
        android:paddingTop="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <!--Recipe title-->
            <TextView
                android:id="@+id/txt_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Burst Tomato Pasta"
                android:textAlignment="viewStart"
                android:textColor="@color/WhiteForTxt"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--Container description -->
            <LinearLayout
                android:id="@+id/container_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/txt_recipe_title">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/description"
                    android:textAlignment="viewStart"
                    android:textColor="@color/WhiteForTxt"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_recipe_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="viewStart"
                    android:textColor="@color/LtGrayFoTxt"
                    android:textSize="16sp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit aliquam mattis. Maecenas et lacinia lacus. In nisl orci, placerat id ultrices at, finibus at odio. Sed lacus nisl, ullamcorper consectetur tortor sed, egestas consectetur augue. Nunc egestas et sem sed iaculis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. " />
            </LinearLayout>

            <!--Container time and cosine-->




                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/container_description"
                    android:id="@+id/container_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top">

                    <ImageView
                        android:id="@+id/img_washoku_ignore"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="start"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        android:src="@drawable/washoku_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_ingredients_ignore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="1"
                        android:text="@string/ingredient"
                        android:textAlignment="viewStart"
                        android:textColor="@color/LtGrayFoTxt"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_washoku_ignore"
                        app:layout_constraintStart_toEndOf="@id/img_washoku_ignore"
                        app:layout_constraintTop_toTopOf="@+id/img_washoku_ignore" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_autoCompleteTextView">


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="12dp"
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="5" />


                <TextView
                    android:id="@+id/txt_steps_ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/preparation_mode"
                    android:textAlignment="viewStart"
                    android:textColor="@color/WhiteForTxt"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    tools:itemCount="5"
                    tools:listitem="@layout/row_steps_detail_item" />



                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/rounded_square_shape"
                    app:backgroundTint="@color/default_color_app"
                    android:padding="12dp"
                    android:text="@string/save"
                    android:textColor="@color/WhiteForTxt"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/edit_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_square_shape"
                    app:backgroundTint="@color/background"
                    android:padding="12dp"
                    android:text="@string/edit_recipe"
                    android:textColor="@color/WhiteForTxt"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>